# maxleq-site

./: Cargo.toml  go.mod  hugo.toml  hugo.yaml
assets/css/: custom.css
content/portfolio/: _index.fr.md
content/posts/: my-first-post.md
data/en/: portfolio.yml
data/fr/: portfolio.yml
src/: database.rs  lib.rs  main.rs  templates.rs
src/entity/: message.rs  mod.rs  post.rs
src/error/: mod.rs  program_error.rs  request_error.rs
src/repository/: message_repository.rs  mod.rs  pagination.rs  post_repository.rs
templates/: layout.html
themes/maxleq/: hugo.toml  theme.toml
themes/maxleq/archetypes/: posts.md  projects.md
themes/maxleq/layouts/partials/: header.html
