[package]
name = "maxleq-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tower = "0.4.13"
tokio = { version = "1.23.0", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }
csv = "1.1"
axum = "0.6.1"
futures = "0.3.25"
enum-as-inner = "0.5.1"
downcast-rs = "1.2.0"
lazy_static = "1.4.0"
unidecode = "0.3.0"
dotenv = "0.15.0"
mongodb = "2.3.1"
askama = "0.11.1"
